--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/Lima
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Bitácora  Pestesting # the main title
+title: Bitácora de Prueba # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
