--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # The Site Configuration
 
 # Import the theme
-theme: jekyll-theme-chirpy
+theme: jekyll-seo-tag
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -16,14 +16,14 @@ timezone: America/Lima
 
 title: Bitácora de Prueba # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Cieberseguridad  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://luispantavas.github.io/"
+url: "https://LuisPantaVas.github.io/"
 
 github:
   username: github_username # change to your GitHub username
